# OIT-onlab-szakdoga

./: .gitignore  README.md
docs/tex/: MBOIT.tex  WOIT.tex  bevezeto.aux  bevezeto.tex  bibDB.bib  camera-equipment-image-svgrepo-com.eps  cimlap.tex  depthpeeling.tex  diasor.aux  diasor.nav  diasor.snm  diasor.tex  diasor.toc  jovo.aux  jovo.tex  main.aux  main.bbl  main.blg  main.idx  main.ilg  main.ind  main.tex  main.toc  modern.aux  modern.tex  osszefoglalo.aux  roviditesek.tex  sajat.aux  sajat.tex
onlab/: CMakeLists.txt  flake.nix  onlab.sln  onlab.vcxproj  onlab.vcxproj.filters
onlab/shaders/: barebones_vs.glsl  fs_FSTQ.glsl  fs_depthpeel_compositor.glsl  fs_maxblinn.glsl  fs_mboit.glsl  fs_mboit_compositor.glsl  fs_mboit_maxblinn.glsl  fs_mboit_momentgen.glsl  fs_mboit_transparent.glsl  fs_simple.glsl  fs_wave_coefficientgen.glsl  fs_wave_compositor.glsl  fs_wave_maxblinn.glsl  fs_wave_transparentz.glsl  phong_fs.glsl  vs_FSTQ.glsl  vs_simple.glsl  vs_transform.glsl
onlab/shaders/depthpeel/: fs_maxblinn.glsl
onlab/src/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GPUProgram.cpp  GPUProgram.h  Geometry.cpp  Geometry.h  Light.h  Main.cpp  Main.h  Material.h  Object.cpp  Object.h  Plane.cpp  Scene.cpp  Scene.h  Settings.h  Shader.cpp  Shader.h  Sphere.cpp  Texture.cpp  Texture.h  TransparencyMode.h  Window.cpp  Window.h
